src/App.css
:root{
  background-color: black;
}
.socials {
  &:hover {
    transform: scale(1.2);
    transition: transform 3s ease-in-out;
    color: white;
  }
}

h2 {
  font-size: 50px;
  color: antiquewhite;
  display: inline;
  align-self: flex-start;
}

.scrollLink {
  &:hover {
    color: white;
  }
}
input {
  color: #ffffff;
}

.formLabel {
  color: white;
}
/* Example CSS Styles */
.custom-carousel {
  width: 95vw;
  height: 400px;
  margin: 0 auto;
  background-color: transparent;
  /* background-color: rgba(0, 0, 0, 0.2); */
  border-radius: 15px;
  /* padding-left: 30px; */
}

.custom-slide {
  width: 80%;
  height: 150px;
  margin: 0 10px;
  padding: 20px;
  background-color: #ffffff;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
}

.custom-slide h3 {
  color: #ff0000;
}

